openshift-basic/base/namespace.yaml
apiVersion: v
kind: Namespace
metadata:
  name: greathearts
  labels:
    name: greathearts
    function: school
  annotations:
    location: "iving"
